# dgg-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
configs/: dggconfig.json  omnilibconfig.json
dggbot/: __init__.py  _logging.py  bot.py  chat.py  chatter.py  errors.py  event.py  flairs.py  funcs.py  message.py  user.py  wsbase.py
dggbot/live/: __init__.py  message.py
examples/: advanced_commands.py  basic_bot.py  basic_commands.py  colorful_chat.py  events.py  live.py  logs.py  mention_cooldown.py  omnilib.py  polls.py
tests/: test_chat.py
