[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgg-bot"
version = "0.10.1"
authors = [
    { name="Fritz-02"},
]
description="A library for making a bot in Destiny.gg chat."
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat"
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Fritz-02/dgg-bot/"
"Bug Tracker" = "https://github.com/Fritz-02/dgg-bot/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
py_version = 38
line_length = 88

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
